--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         </header>
 
         <section>
+          <div>
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+          </div>
+        </section>
+
+        <section>
         <h2>What We Do</h2>
         </section>
 
@@ -48,6 +55,12 @@
 
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
+           
+            <div>
+              <a href="#">Read Our Privacy Policy</a><br />
+              &copy; 2019 Run Buddy, Inc.
+            </div> 
+
         </footer>
 
     </body>
